--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html>
 
 
+
+
 <head>
 <link rel="stylesheet" href="css/stil.css">
 <title>Auto-Moto Magazin</title>
 </head>
 
 <body>
-<div class="stranica">
+
+
+<center><img src="slike/naslovna.jpg" height="300px" width="100%"></center>
 	<header>
-	<img src="" height="" width="100%">
+	
 	<nav>
+	
 		<ul>
 			<li><a href="#">Pocetna</a></li>
 			<li><a href="#">Auto</a></li>
@@ -21,29 +26,45 @@
 		</ul>
 	</nav>
 	</header>
+
+<div class="stranica">
+
+
+
+
+	<div id="desni">
+	</div>
 	
-	<div class="desni">
+	
+	
+	<div id="levi">
+		
+		
+		<div class="prvi">
+		<p></p>
+		<img src="" height="" width="">
+		</div>
+		
+		
+		<div class="drugi">
+		<p></p>
+		<img src="" height="" width="">
+		</div>
+		
+
+		<div class="treci">
+		<p></p>
+		<img src="" height="" width="">
+		</div>
+		
 		
 	</div>
+			
+
+
+
 	
-	
-	<div class="prvi">
-		<p></p>
-		<img src="" height="" width="">
-	</div>
-	
-	
-	<div class="drugi">
-		<p></p>
-		<img src="" height="" width="">
-	</div>
-	
-	
-	<div class="treci">
-		<p></p>
-		<img src="" height="" width="">
-	</div>
-	
+
 	
 </div>
 </body>
