--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<nav>
 	
 		<ul>
-			<li><a href="#">Pocetna</a></li>
+			<li><a href="#">Početna</a></li>
 			<li><a href="#">Auto</a></li>
 			<li><a href="#">Moto</a></li>
 			<li><a href="#">Istorija</a></li>
@@ -33,6 +33,13 @@
 
 
 	<div id="desni">
+	<h3>Prijava</h3>
+	<p><b>Korisnicko ime:</b></p>
+	<input></input>
+	<p><b>Sifra:</b></p>
+	<input></input>
+
+	
 	</div>
 	
 	
@@ -41,22 +48,44 @@
 		
 		
 		<div class="prvi">
-		<p></p>
-		<img src="" height="" width="">
+		<h3>BMW i3 Eko automobil godine</h3>
+		<p>Potpuno električni BMW i3 je prvi model serijske proizvodnje na svetu dizajniran za ekološku održivost u svakoj fazi, od razvoja automobila pa do njegove proizvodnje i svakodnevne upotrebe.
+		Ali BMW i3 nije samo zeleni automobil, jer sa ovakvom agilnošću i ubrzanjem (potrebno je manje od 7 sekundi za njegov sprint od 0-100 km/h) on pruža i veliko uživanje u vožnji.
+		Sajam je ove godine, pored konferencije “Održivi transport – Učinimo vazduh čistijim”, obuhvatio i izložbu električnih i plug-in automobila, električnih bicikala, električnih skutera i simulatora električnih plovila, te je Delta Motors takođe, izložio i svoj plug-in hibrid model BMW i8.
+		<br><br><a href=""> pogledaj detaljnije o automobilima...</a></p>
+		<img src="slike/bmwi3.jpg" height="300" >
 		</div>
 		
 		
 		<div class="drugi">
-		<p></p>
-		<img src="" height="" width="">
+		<h3>Stiže nova Honda Gold Wing</h3>
+		<p>Upravo prema željama vozača i ljubitelja ovog motocikla.
+		Motor je bitno izmenjen pa redni šestocilindraš zapremine 1833 ccm sada ima snagu od 126 KS, a prosečna potrošnja je umanjena za nešto više od jednog litra. Novi su i ram i ogibljenje što bi trebalo da vožnju učini dodatno udobnijom.
+		Popis standardne opreme je prilično dug; električni hod unazad, pomoć pri kretanju na uzbrdici, sistem kontrole proklizavanja, audio sistem, GPS… Spisak dodatne opreme seže koliko i vaša mašta. Tačna cena još nije poznata ali će kretati od oko 24.000 dolara.
+		<br><br><a href=""> pogledaj detaljnije o motorciklima...</a></p>
+		<img src="slike/honda.jpg" height="300" >
 		</div>
 		
 
-		<div class="treci">
-		<p></p>
-		<img src="" height="" width="">
+			<div class="prvi">
+		<h3>Porsche 928 slavi 40. rođendan</h3>
+		<p>Porsche 928 nikada nije dostigao slavu modela 911 ali je, nesumnjivo, jedan od najznačajnijih modela štutgartske fabrike. Zamišljen kao luksuzni Grand Tourer, Porsche 928 bio je jedinstven po svojoj pojavi i performansama.
+		U to vreme, malo automobila se moglo smatrati konkurentima devetstodvadesetmosmici. Veliki snažni V8 motor i 2+2 sedišta, bili su samo delić ukupne atmosfere koju je auto formirao.
+		V8 motor je smešten napred, a tokom skoro dve decenije proizvodnje samo je dobijao na zapremini i snazi – od 4,5 litre sve do 5,4, koliko je imao model iz 1995. kada je prekinuta proizvodnja.
+		Ukupno ih je prodato preko 60.000 primeraka, uglavnom standardnih 928-ica. Naravno, među njima je bilo verzija S4 i S1, odnosno S2.
+		<br><br><a href=""> pogledaj detaljnije istoriju o automobilima i motorciklima...</a></p>
+		<img src="slike/porse.jpg" height="300" >
 		</div>
 		
+		<div class="drugi">
+		<h3>TEST: Volkswagen Passat 2,0 TDI Comfortline</h3>
+		<p>Jedna od najčuvenijih limuzina srednje klase ponovo se našla na testu Auto magazina. Razlog za to su akcijske cene, po kojima „pasat“ može da se kupi već 20.990 evra za keš
+		SUV modeli su odavno postali dominantniji u odnosu na limuzine srednje klase. Zbog toga se one mogu prebrojati na prste obe ruke, bar kada je Evropa u pitanju. Naravno, ovde ne pričamo o premijum segmentu.
+		Najnovija generacija Volkswagen Passata (B8) je već više od tri godine prisutna na tržištu. Za to vreme, Porše SCG je uspeo da obezbedi zaista zanimljivu ponudu, i to u vidu Passata sa Classic paketom opreme.
+		Reč je o neredizajniranoj verziji koja je bogatija od nekadašnjeg osnovnog Trendline, ali je za nijansu siromašniji u odnosu na srednji, Comfortline.
+		<br><br><a href=""> pogledaj sve automobile koji su testirani...</a></p>
+		<img src="slike/pasat.jpg" height="300" >
+		</div>
 		
 	</div>
 			
