--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 
 <head>
 <link rel="stylesheet" href="css/stil.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Auto-Moto Magazin</title>
 </head>
 
-<body>
+<body background="slike/pozadina.jpg">
 
 
-<center><img src="slike/naslovna.jpg" height="300px" width="100%"></center>
+
+<img src="slike/naslovna.jpg" height="300px" width="100%">
 	<header>
 	
 	<nav>
@@ -33,13 +35,27 @@
 
 
 	<div id="desni">
-	<h3>Prijava</h3>
-	<p><b>Korisnicko ime:</b></p>
+	<div id="prijava">
+	<h1>Prijava:</h1>
+	<p><b>Korisničko ime:</b></p>
 	<input></input>
-	<p><b>Sifra:</b></p>
+	<p><b>Šifra:</b></p>
 	<input></input>
-
-	
+	<br>
+	<button>Potvrdi</button>
+	</div>
+	<br>
+	<div>
+	<h1>Sponzori:</h1>
+	<ul id="sponzori">
+	 
+		<li><img src="slike/1.png"></li>
+		<li><img src="slike/2.jpg"></li>
+		<li><img src="slike/3.png"></li>	
+		<li><img src="slike/4.png"></li>
+		<li><img src="slike/5.png"></li>
+	</ul>
+	</div>
 	</div>
 	
 	
@@ -88,14 +104,33 @@
 		</div>
 		
 	</div>
-			
-
-
-
 	
-
+	
 	
 </div>
+
+	<footer>
+		<div id="futer">
+		<h1>Pratite nas na društvenim mrežama</h1>
+		<ul>
+			<li><a href="#"><i class="fa fa-facebook"></i></li>
+			<li><a href="#"><i class="fa fa-instagram"></i></li>
+			<li><a href="#"><i class="fa fa-twitter"></i></li>
+			<li><a href="#"><i class="fa fa-whatsapp"></i></li>
+		
+		</ul>
+		
+		
+		<img id="img1" src="slike/futer1.png">
+		<img id="img2" src="slike/futer2.png">
+		
+		
+		
+		</div>
+		
+		
+	</footer>
+
 </body>
 
 
