--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 <link rel="stylesheet" href="css/stil.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Auto-Moto Magazin</title>
+<title>Auto-Moto Magazin|Početna</title>
 </head>
 
 <body background="slike/pozadina.jpg">
@@ -20,11 +20,11 @@
 	<nav>
 	
 		<ul>
-			<li><a href="#">Početna</a></li>
-			<li><a href="#">Auto</a></li>
-			<li><a href="#">Moto</a></li>
-			<li><a href="#">Istorija</a></li>
-			<li><a href="#">Testovi</a></li>
+			<li><a href="index.html">Početna</a></li>
+			<li><a href="html/index2.html">Auto</a></li>
+			<li><a href="html/index3.html">Moto</a></li>
+			<li><a href="html/index4.html">Istorija</a></li>
+			<li><a href="html/index5.html">Testovi</a></li>
 		</ul>
 	</nav>
 	</header>
@@ -36,26 +36,27 @@
 
 	<div id="desni">
 	<div id="prijava">
-	<h1>Prijava:</h1>
-	<p><b>Korisničko ime:</b></p>
-	<input></input>
-	<p><b>Šifra:</b></p>
-	<input></input>
-	<br>
-	<button>Potvrdi</button>
+		<h1>Prijava:</h1>
+		<p><b>Korisničko ime:</b></p>
+		<input></input>
+		<p><b>Šifra:</b></p>
+		<input></input>
+		<br>
+		<button>Potvrdi</button>
 	</div>
 	<br>
 	<div>
-	<h1>Sponzori:</h1>
-	<ul id="sponzori">
+		<h1>Sponzori:</h1>
+		<ul id="sponzori">
 	 
-		<li><img src="slike/1.png"></li>
-		<li><img src="slike/2.jpg"></li>
-		<li><img src="slike/3.png"></li>	
-		<li><img src="slike/4.png"></li>
-		<li><img src="slike/5.png"></li>
-	</ul>
+			<li><img src="slike/1.png"></li>
+			<li><img src="slike/2.jpg"></li>
+			<li><img src="slike/3.png"></li>	
+			<li><img src="slike/4.png"></li>
+			<li><img src="slike/5.png"></li>
+		</ul>
 	</div>
+	
 	</div>
 	
 	
@@ -68,7 +69,7 @@
 		<p>Potpuno električni BMW i3 je prvi model serijske proizvodnje na svetu dizajniran za ekološku održivost u svakoj fazi, od razvoja automobila pa do njegove proizvodnje i svakodnevne upotrebe.
 		Ali BMW i3 nije samo zeleni automobil, jer sa ovakvom agilnošću i ubrzanjem (potrebno je manje od 7 sekundi za njegov sprint od 0-100 km/h) on pruža i veliko uživanje u vožnji.
 		Sajam je ove godine, pored konferencije “Održivi transport – Učinimo vazduh čistijim”, obuhvatio i izložbu električnih i plug-in automobila, električnih bicikala, električnih skutera i simulatora električnih plovila, te je Delta Motors takođe, izložio i svoj plug-in hibrid model BMW i8.
-		<br><br><a href=""> pogledaj detaljnije o automobilima...</a></p>
+		<br><br><a href="html/index2.html"> pogledaj detaljnije o automobilima...</a></p>
 		<img src="slike/bmwi3.jpg" height="300" >
 		</div>
 		
@@ -109,14 +110,17 @@
 	
 </div>
 
+
+
 	<footer>
 		<div id="futer">
 		<h1>Pratite nas na društvenim mrežama</h1>
-		<ul>
+		<ul> 
+	
 			<li><a href="#"><i class="fa fa-facebook"></i></li>
 			<li><a href="#"><i class="fa fa-instagram"></i></li>
 			<li><a href="#"><i class="fa fa-twitter"></i></li>
-			<li><a href="#"><i class="fa fa-whatsapp"></i></li>
+			<li><a href="#"><i class="fa fa-youtube"></i></li>
 		
 		</ul>
 		
