--- a/html/index4.html
+++ b/html/index4.html
@@ -7,7 +7,7 @@
 <head>
 <link rel="stylesheet" href="../css/stil.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Auto-Moto Magazin|Istorija</title>
+<title>AMM|Istorija</title>
 </head>
 
 <body background="../slike/pozadina.jpg">
@@ -29,33 +29,40 @@
 	</nav>
 	</header>
 	
-	<div class="stranica">
+	<div class="stranica2">
+		<h1></h1>
+		<img src="../slike/.jpg">
+		<p></p>
+		<img src="../slike/.jpg">
+		<p></p>
+		<img src="../slike/.jpg">
+		<p></p>
+	</div>
+	
+	
+	
+
+	<div class="stranica2">
+		<h1></h1>
+		<img src="../slike/.jpg">
+		<p></p>
+		<img src="../slike/.jpg">
+		<p></p>
+		<img src="../slike/.jpg">
+		<p></p>
+	</div>
 	
 	
 	
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	<div class="stranica2">
+		<h1></h1>
+		<img src="../slike/.jpg">
+		<p></p>
+		<img src="../slike/.jpg">
+		<p></p>
+		<img src="../slike/.jpg">
+		<p></p>
 	</div>
 	
 	
@@ -63,23 +70,7 @@
 	
 	
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
 	
 	
 	
