--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <head>
 <link rel="stylesheet" href="css/stil.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Auto-Moto Magazin|Početna</title>
+<title>AMM|Početna</title>
 </head>
 
-<body background="slike/pozadina.jpg">
+<body background="slike/pozadina.jpg" >
 
 
 
@@ -35,15 +35,15 @@
 
 
 	<div id="desni">
-	<div id="prijava">
+	<form>
 		<h1>Prijava:</h1>
-		<p><b>Korisničko ime:</b></p>
-		<input></input>
-		<p><b>Šifra:</b></p>
-		<input></input>
+		<h4><b>Korisničko ime:</b></h4>
+		<input placeholder="Korisničko ime.."></input>
+		<h4><b>Šifra:</b></h4>
+		<input type="password" placeholder="Šifra.."></input>
 		<br>
 		<button>Potvrdi</button>
-	</div>
+	</form>
 	<br>
 	<div>
 		<h1>Sponzori:</h1>
@@ -79,7 +79,7 @@
 		<p>Upravo prema željama vozača i ljubitelja ovog motocikla.
 		Motor je bitno izmenjen pa redni šestocilindraš zapremine 1833 ccm sada ima snagu od 126 KS, a prosečna potrošnja je umanjena za nešto više od jednog litra. Novi su i ram i ogibljenje što bi trebalo da vožnju učini dodatno udobnijom.
 		Popis standardne opreme je prilično dug; električni hod unazad, pomoć pri kretanju na uzbrdici, sistem kontrole proklizavanja, audio sistem, GPS… Spisak dodatne opreme seže koliko i vaša mašta. Tačna cena još nije poznata ali će kretati od oko 24.000 dolara.
-		<br><br><a href=""> pogledaj detaljnije o motorciklima...</a></p>
+		<br><br><a href="html/index3.html"> pogledaj detaljnije o motorciklima...</a></p>
 		<img src="slike/honda.jpg" height="300" >
 		</div>
 		
@@ -90,7 +90,7 @@
 		U to vreme, malo automobila se moglo smatrati konkurentima devetstodvadesetmosmici. Veliki snažni V8 motor i 2+2 sedišta, bili su samo delić ukupne atmosfere koju je auto formirao.
 		V8 motor je smešten napred, a tokom skoro dve decenije proizvodnje samo je dobijao na zapremini i snazi – od 4,5 litre sve do 5,4, koliko je imao model iz 1995. kada je prekinuta proizvodnja.
 		Ukupno ih je prodato preko 60.000 primeraka, uglavnom standardnih 928-ica. Naravno, među njima je bilo verzija S4 i S1, odnosno S2.
-		<br><br><a href=""> pogledaj detaljnije istoriju o automobilima i motorciklima...</a></p>
+		<br><br><a href="html/index4.html"> pogledaj detaljnije istoriju o automobilima i motorciklima...</a></p>
 		<img src="slike/porse.jpg" height="300" >
 		</div>
 		
@@ -100,7 +100,7 @@
 		SUV modeli su odavno postali dominantniji u odnosu na limuzine srednje klase. Zbog toga se one mogu prebrojati na prste obe ruke, bar kada je Evropa u pitanju. Naravno, ovde ne pričamo o premijum segmentu.
 		Najnovija generacija Volkswagen Passata (B8) je već više od tri godine prisutna na tržištu. Za to vreme, Porše SCG je uspeo da obezbedi zaista zanimljivu ponudu, i to u vidu Passata sa Classic paketom opreme.
 		Reč je o neredizajniranoj verziji koja je bogatija od nekadašnjeg osnovnog Trendline, ali je za nijansu siromašniji u odnosu na srednji, Comfortline.
-		<br><br><a href=""> pogledaj sve automobile koji su testirani...</a></p>
+		<br><br><a href="html/index5.html"> pogledaj sve automobile koji su testirani...</a></p>
 		<img src="slike/pasat.jpg" height="300" >
 		</div>
 		
