--- a/html/index2.html
+++ b/html/index2.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-
-
-
 <head>
 <link rel="stylesheet" href="../css/stil.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>AMM|Auto</title>
+<title>AMM | Auto</title>
 </head>
 
 <body background="../slike/pozadina.jpg">
@@ -30,7 +27,7 @@
 	</header>
 	
 	<div class="stranica2">
-		<h1>KRALJ SUV MODELA JE STIGAO: ROLLS ROYCE CULLIAN</h1>
+		<h1>Kralj SUV modela je stigao: Rolls Royce Cullian</h1>
 		<img src="../slike/rols1.jpg">
 		<p>Najnoviji je i odmah postaje kralj SUV modela - Rolls Royce Cullinan. Veći je od Bentlijevog modela Bentayga, a sa svojim karakterističnim luksuzom nema konkurenciju
 		Nekrunisani kralj SUV modela je pred vama – ovo je prvi “terenac” kompanije Rolls Royce, Cullinan. Konstruisan je na mehaničkoj platformi Phantoma, koja je potpuno nova i većinom napravljena od aluminijuma.</p>
@@ -45,7 +42,7 @@
 	
 	
 	<div class="stranica2">
-		<h1>SPREMAN DA ZAROZA ASFALT: BMW M5 COMPETITION SA 625 KS</h1>
+		<h1>Spreman da zaroza asfalt: BMW M5 Competition sa 625 KS</h1>
 		<img src="../slike/m51.jpg">
 		<p>BMW M5 je prava zver u obliku limuzine, koja bez pogona na sva četiri točka ne bi mogla tako lako da prenese svih 600 “konja” na podlogu, ali BMW ne bi bio to što jeste da nije ambicioznih ideja i inženjera, koji su odlučili da stvore još ekstremniju verziju najbrže “petice”.</p>
 		<img src="../slike/m53.jpg">
@@ -57,7 +54,7 @@
 	
 	
 	<div class="stranica2">
-		<h1>PREDSTAVLJAMO VAM NOVI MERCEDES A KLASE</h1>
+		<h1>Predstavljamo Vam novi Mercedes A Klase</h1>
 		<img src="../slike/mercedes1.jpg">
 		<p>Nakon više meseci iščekivanja, tokom kojih nas je Mercedes “zadirkivao” fotografijama enterijera, nemački automobilski gigant je i zvanično skinuo veo sa potpuno nove, četvrte generacije A-klase, čijem smo predstavljanju večeras prisustvovali</p>
 		<img src="../slike/mercedes2.jpg">
