--- a/html/index4.html
+++ b/html/index4.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-
-
-
 <head>
 <link rel="stylesheet" href="../css/stil.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>AMM|Istorija</title>
+<title>AMM | Istorija</title>
+
 </head>
 
 <body background="../slike/pozadina.jpg">
@@ -30,39 +28,39 @@
 	</header>
 	
 	<div class="stranica2">
-		<h1></h1>
-		<img src="../slike/.jpg">
-		<p></p>
-		<img src="../slike/.jpg">
-		<p></p>
-		<img src="../slike/.jpg">
-		<p></p>
+		<h1>Porsche muzej dobio najstariji 911 u kolekciji</h1>
+		<img src="../slike/911.png">
+		<p>Za ljubitelje starovremenskih vozila prava je sreća kada se pronađe davno zaboravljeni auto, baš kao ovaj Porsche 901 iz 1964. godine sa rednim brojem 57. Porsche muzej svakako je jedno od omiljenih turističkih atrakcija koje svaki ljubitelj automobila mora da poseti. To je učinila i ekipa Auto-moto magazina pre dve godine a po svoj prilici ćemo ga ponovo posetiti s obzirom na novitet u kolekciji.</p>
+		<img src="../slike/9112.png">
+		<p>Reč je o najstarijem primerku iz serije 911 u kolekciji. Konkretno, radi se o Porscheu 901 sa serijskim brojem 57. Auto je iz 1964. godine i napravljen je u vreme pre nego što je završen spor Peugeota i Porschea oko naziva modela. Konkretno, Peugeot je zaštitio prava na trocifrene oznake automobila sa nulom u sredini, pa je iz tog razloga Porsche seriju 901 promenio u 911. Ovaj konkretan auto je pre nekoliko godina pronađen od strane novinara TV emisije koja se bavi antikvitetima. Kontaktirali su Porsche muzej kako bi saznali više podataka o njemu. Tada su otkrili da je broj šasije 300.057, odnosno da je jedan od retkih primeraka napravljenih pre nego što je došlo do promene oznake modela.</p>
+		<img src="../slike/9113.jpg">
+		<p>Pozitivna strana svega je to što auto nikada nije bio restauriran, što je stručnjacima muzeja omogućilo vraćanje u originalno stanje sa najviše moguće originalnih delova. Generalno je pravilo da se zadrži što više originalnih delova umesto da se menjaju, pa je iz tog razloga restauracija trajala tri godine.</p>
 	</div>
 	
 	
 	
 
 	<div class="stranica2">
-		<h1></h1>
-		<img src="../slike/.jpg">
-		<p></p>
-		<img src="../slike/.jpg">
-		<p></p>
-		<img src="../slike/.jpg">
-		<p></p>
+		<h1>Ovo je preteča modela Rolls Royce Cullinan</h1>
+		<img src="../slike/dominator2.jpg" width="1000px" height="500px">
+		<p>Ovo je prvi ultra-luksuzni terenac na svetu - Bentley Dominator. Devedesetih ih je napravljeno svega nekoliko primeraka za Sultana od Bruneja. Posle modela Bently Bentayga, novi Rolls Royce Cullinan je drugi ultra luksuzni SUV na svetu. Doduše, Rols je dosta veći od Bentlija i po svom obliku karoserije nas je podsetio na vrlo zabrovaljeni Bentley Dominator.</p>
+		<img src="../slike/dominator3.jpg" width="1000px" height="500px">
+		<p>To je zapravo preteča današnjeg Rolsovog SUV-a, a datira iz vremena kada su ova dva brenda bila pod zajedničkim krovom. Bentley Dominator je specijalno konstruisan za Sultana od Bruneja devedesetih godina. Bio je to zapravo prvi super-luksuzni SUV na svetu i očigledno idejna preteča današnjih Kulinana i Bentajge. U to vreme, osim Mercedesove G klase i Range Rovera, nije bilo drugih luksuznih terenaca, pa je bilo potpuno jasno zbog čega se Sultan odlučio na ovakvu porudžbinu.</p>
+		<img src="../slike/dominator1.jpg" width="1000px" height="500px">
+		<p>Bentley je napravio svega šest primeraka Dominatora, i to u različitim bojama. Zanimljivo je da je Bentley kao mehaničku platformu za razvoj Dominatora, iskoristio šasiju Rande Rovera, sa sve pogonom na sva četiri točka, uključujući i V8 motor. Doduše, ove informacije su nagađanja, s obzirom da su do dana današnjeg ostale stroga tajna, ali je sigurno da je Bentley Dominator prvi ultra-luksuzni terenac svih vremena.</p>
 	</div>
 	
 	
 	
 	
 	<div class="stranica2">
-		<h1></h1>
-		<img src="../slike/.jpg">
-		<p></p>
-		<img src="../slike/.jpg">
-		<p></p>
-		<img src="../slike/.jpg">
-		<p></p>
+		<h1>Range Rover proslavlja pola veka postojanja</h1>
+		<img src="../slike/land3.jpg" width="1000px" height="500px">
+		<p>Ako se za neki auto može reći da je pionir među luksuznim terencima, to je svakako “rendž rover” (Range Rover). Premijerno je predstavljen pre 48 godina a od tada do danas napravljeno je preko 1.700.000 primeraka u četiri generacije koje su se prodavale u 170 zemalja širom sveta.</p>
+		<img src="../slike/land2.jpg">
+		<p>Od lansiranja prvog Range Rover modela davne 1970-te, ovo vozilo se kontinuirano razvija. Najluksuznijeg sportskog terenca (SUV) na svetu odlikuju izvanredni nivoi sofisticiranosti, performansi, dizajna i naravno tehnološki napretci koji čine da se ovo vozilo izdvaja od drugih. Sada ćemo se osvrnuti na istoriju serije luksuznih sportskih terenaca poznatih pod imenom "Range Rover porodica".</p>
+		<img src="../slike/land1.jpg" >
+		<p>Bio je prvi terenac sa stalnim 4×4 pogonom, kao i prvi model u klasi koji je imao ABS kočnice. I ne samo to, bio je prvi koji je imao sistem za elektronsku kontrolu proklizavanja pogonskih točkova, automatsko vazdušno ogibljenje i potpuno aluminijumsku konstrukciju.</p>
 	</div>
 	
 	
