--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 
 
 <head>
+<meta charset="UTF-8">
+<meta name="keywords" content="automobili, motori, magazin, testovi, auto, moto">
+<meta name="description" content="Dobrodošli na vebsajt Auto-Moto Magazina, ovde možete pronaći dosta zanimljivosti o automobilima i motorciklima...">
 <link rel="stylesheet" href="css/stil.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>AMM|Početna</title>
+<title>AMM | Početna</title>
+<link href="slike/ikona.png" rel="shortcut icon">
+<link href="slike/ikona.png" rel="icon" type="image/png">
 </head>
 
 <body background="slike/pozadina.jpg" >
@@ -37,11 +42,10 @@
 	<div id="desni">
 	<form>
 		<h1>Prijava:</h1>
-		<h4><b>Korisničko ime:</b></h4>
-		<input placeholder="Korisničko ime.."></input>
-		<h4><b>Šifra:</b></h4>
+		<h2><b>Korisničko ime:</b></h2>
+		<input type="text" placeholder="Korisničko ime.."></input>
+		<h2><b>Šifra:</b></h2>
 		<input type="password" placeholder="Šifra.."></input>
-		<br>
 		<button>Potvrdi</button>
 	</form>
 	<br>
